--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 
-<html>
-  <head>
-    <title>WPJD - Home</title>
-  </head>
+<script type="importmap">
+  {
+    "imports": {
+      "three": "https://cdn.jsdelivr.net/npm/three@0.165.0/build/three.module.js",
+      "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.165.0/examples/jsm/"
+    }
+  }
+</script>
 
-  <body>
-    <h1>Hello World!</h1>
-  </body>
-  
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>WPJD - Home</title>
+		<style>
+			body { margin: 0; }
+		</style>
+	</head>
+	<body>
+		<script type="module" src="/src/js/scene.js"></script>
+	</body>
 </html>
