--- a/404.html
+++ b/404.html
@@ -61,7 +61,7 @@
 
       <div id="suggestions">
         <a href="https://githubstatus.com">Github Status</a> —
-        <a href="https://githubstatus.com">WPJD Status</a> —
+        <a href="https://status.wpjd.me/">WPJD Status</a> —
         <a href="https://wpjd.me">Go back!</a>
       </div>
 
